--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name" translatable="false">Notification Log</string>
+    <string name="app_name" translatable="false">Notifbase</string>
     <string name="notification_access_label">@string/app_name</string>
 
     <!-- Activities -->
@@ -9,7 +9,6 @@
     <string name="activity_details">Details</string>
 
     <!-- Menu -->
-    <string name="menu_about">About</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_export">Export</string>
@@ -30,12 +29,12 @@
     <string name="settings_browse_summary_plural">%1$d notifications</string>
 
     <!-- Log text -->
-    <string name="settings_text">Log Text</string>
-    <string name="settings_text_summary">Log the actual notification content. This increases the size of the log file but allows you to read past messages.</string>
+    <string name="settings_text">Store Content</string>
+    <string name="settings_text_summary">Store the notification content</string>
 
     <!-- Log ongoing -->
-    <string name="settings_ongoing">Log Ongoing</string>
-    <string name="settings_ongoing_summary">Log ongoing notifications, such as downloads. This creates a large number of additional log entries.</string>
+    <string name="settings_ongoing">Ongoing Process Notifications</string>
+    <string name="settings_ongoing_summary">Store ongoing notifications</string>
 
     <!-- Export -->
     <string name="snackbar_export">Exporting… please wait…</string>
@@ -45,13 +44,6 @@
     <string name="dialog_delete_text">Do you really want to delete the log file? This cannot be undone.</string>
     <string name="dialog_delete_yes">Delete</string>
     <string name="dialog_delete_no">Cancel</string>
-
-    <!-- About -->
-    <string name="settings_about">About</string>
-    <string name="settings_about_summary">Notification Log on GitHub. Licensed under the MIT License.</string>
-
-    <!-- Version -->
-    <string name="settings_version">Version</string>
 
     <!-- Details -->
     <string name="details_error">Unable to load the details of this entry.</string>
